<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_statictical"
            android:title="@string/nav_statistical"
            android:icon="@drawable/ic_chart"/>

        <item android:id="@+id/nav_about"
            android:title="@string/nav_about"
            android:icon="@drawable/ic_info"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>

            <item android:id="@+id/nav_logout"
                android:title="@string/nav_logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>